--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="logo.png" />
+
+    <meta name="title" content="The Resource Center">
+    <meta name="description" content="Online hub for all your needs at The Resource Center">
+    <meta name="keywords" content="Resource Center, Templestowe College, School, Discord">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="10 days">
+    <meta name="author" content="Flora Hill">
+    <meta name="theme-color" content="#fbc2eb">
+
+    <meta property="og:url" content="https://therc.rest/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="The Resource Center">
+    <meta property="og:description" content="Online hub for all your needs at The Resource Center">
+    <meta property="og:image" content="https://therc.rest/logo.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="therc.rest">
+    <meta property="twitter:url" content="https://therc.rest/">
+    <meta name="twitter:title" content="The Resource Center">
+    <meta name="twitter:description" content="Online hub for all your needs at The Resource Center">
+    <meta name="twitter:image" content="https://therc.rest/logo.png">
 
     <title>The Resource Center</title>
     <link rel="stylesheet" href="style.css">
@@ -44,7 +68,7 @@
     <section name="discord">
 
         <h1>Join the Discord</h1>
-     
+
         <discord></discord>
 
         <div class="container full">
